SVN
-------------------------------

Gen:   Resolved issue CASTOR-1843 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Re-generated classes for binding files, in preparation for adding support for
       new <componentBinding>
       Details: http://jira.codehaus.org/browse/CASTOR-1843
       (Werner - 20070118)

XML:   Resolved issue CASTOR-1847 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Minor improvement in validation classes
       Details: http://jira.codehaus.org/browse/CASTOR-1847
       (Edward - 20070117)

Gen:   Resolved issue CASTOR-1839 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with derivation of Java types for UNIONs that are part of restriction
       hierarchies.
       Details: http://jira.codehaus.org/browse/CASTOR-1839
       (Werner - 20070117)

Doc:   Resolved issue CASTOR-1841 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed documentation for 'defaultBindingType' attribute in XMl code generation documentation.
       Details: http://jira.codehaus.org/browse/CASTOR-1841
       (Werner - 20070117)

XML:   Resolved issue CASTOR-1762 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Castor does not build under JDK 6; jdo/engine/ClobImpl does not override abstract
       getCharacterStream(long,long)
       Details: http://jira.codehaus.org/browse/CASTOR-1762
       (Edward - 20070116)

Gen:   Resolved issue CASTOR-1827 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Moved part sof XSList code into new XSNMTokens and XSIdrefs classes.
       Details: http://jira.codehaus.org/browse/CASTOR-1827
       (Werner - 20070115)

XML:   Resolved issue CASTOR-1837 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Fix small Java 1.3 regressions in XML code
       Details: http://jira.codehaus.org/browse/CASTOR-1837
       (Edward - 20070114)
