@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<xsd:schema targetNamespace="http://www.castor.org/root"
+            xmlns:root="http://www.castor.org/root"
+            xmlns:imp="http://www.castor.org/imported"
+            xmlns:xsd="http://www.w3.org/2001/XMLSchema"
+            elementFormDefault="unqualified"
+            attributeFormDefault="unqualified">
+
+    <xsd:import namespace="http://www.castor.org/imported" schemaLocation="imported.xsd"/>
+
+    <xsd:complexType name="RootType">
+        <xsd:sequence>
+            <xsd:element name="Initial"         type="xsd:string"/>
+            <xsd:element name="Subsequent"      type="xsd:string"/>
+            <xsd:element name="ImportedElement" type="imp:ImportedType"/>
+        </xsd:sequence>
+    </xsd:complexType>
+
+    <xsd:element name="Root" type="root:RootType"/>
+
+</xsd:schema>
